# morfeusz_git

./: CMakeLists.txt  README  buildAll.sh  buildDarwin.sh  buildDict.sh  buildLinux.sh  buildManylinux.sh  buildOtherDict.sh  buildUbuntu.sh  buildWindows.sh  createDictionaryDeb.sh  createGUIDeb.sh  doTest.sh  extractTags.sh  initializeAnalyzerTest.sh  profile.sh  test-darwin.sh  test.sh  testJavaWrapper.sh
fsa/: CMakeLists.txt  _fsa_impl.hpp  _fsaimpl.hpp  _simple_fsa_impl.hpp  _state_impl.hpp  _vfsa_impl.hpp  cfsa1_impl.hpp  cfsa2_impl.hpp  const.cpp  const.hpp  fsa.hpp  fsa_impl.hpp  interpretation.hpp  simplefsa_impl.hpp  state_impl.hpp  test_dict.cpp  test_morph.cpp  test_not_recognize.cpp  test_recognize.cpp  test_speed.cpp  utils.hpp
fsabuilder/: CMakeLists.txt  PoliMorfTest.cek  buildanalyzer.sh  buildfsa.py  buildgenerator.sh  inputSmall.txt  morfeusz_builder  setup.py.in
fsabuilder/caseconv/: generate.py
gui/: CMakeLists.txt  MANIFEST.MF  launch4j-config32.xml  launch4j-config64.xml  morfeusz-gui  morfeusz-gui.LD_PATH  morfeusz.desktop  morfeusz.nsi  morfeusz2-gui.menu  morfeusz32.nsi  morfeusz64.nsi
gui/Morfeusz.app/Contents/: Info.plist
gui/morfeusz/: AboutDialog.java  Agent.java  DictSearchPathsDialog.java  Morfeusz.java  OptionsDialog.java  PlaceHolder.java  Preferences.java  RecentFileAction.java  ResultsPane.java  SelectFileDialog.java  ToolBarButton.java
input/: PoliMorfSmall.tab  dodatki.tab  emoji.tab  morfeusz-sgjp.tagset  polimorf.tagset  sgjp-morfeusz.tagset
jmorfeusz/: nbactions-release-profile.xml  pom.xml
morfeusz/: CMakeLists.txt  CasePatternHelper.hpp  DefaultTagset.cpp  DefaultTagset.hpp  DictionariesRepository.cpp  DictionariesRepository.hpp  Dictionary.cpp  Dictionary.hpp  EncodedGeneratorInterpretation.hpp  EncodedInterpretation.hpp  Environment.cpp  Environment.hpp  FlexionGraph.cpp  FlexionGraph.hpp  Generator.cpp  Generator.hpp  GeneratorDeserializer.cpp  GeneratorDeserializer.hpp  IdResolverImpl.cpp  IdResolverImpl.hpp  InflexionGraph.cpp  InflexionGraph.hpp  InterpretedChunk.hpp  InterpretedChunksDecoder.hpp  InterpsGroup.hpp  Morfeusz.cpp  Morfeusz.hpp  MorfeuszConfig.hpp.in  MorfeuszImpl.cpp  MorfeuszImpl.hpp  MorfeuszInternal.cpp  MorfeuszInternal.hpp  MorfeuszOptions.hpp  MorfeuszVersion.hpp.in  Morfeusz_impl.hpp  MorphDeserializer.cpp  MorphDeserializer.hpp  MorphInterpretation.cpp  MorphInterpretation.hpp  Qualifiers.cpp  (+41 more)
morfeusz/c_api/: ResultsManager.cpp  ResultsManager.hpp
morfeusz/case/: CaseConverter.cpp  CaseConverter.hpp  CasePatternHelper.cpp  CasePatternHelper.hpp  caseconv.cpp  caseconv.hpp
morfeusz/charset/: CaseConverter.cpp  CaseConverter.hpp  CharsetConverter.cpp  CharsetConverter.hpp  TextReader.cpp  TextReader.hpp  case_folding.cpp  case_folding.hpp  caseconv.cpp  caseconv.hpp  charset_utils.hpp  conversion_tables.cpp  conversion_tables.hpp
morfeusz/charset/utf8/: checked.h  core.h
morfeusz/cli/: cli.cpp  cli.hpp  outputUtils.hpp
morfeusz/data/: default_fsa.cpp  default_fsa.hpp
morfeusz/decoder/: InterpretedChunksDecoder.hpp  InterpretedChunksDecoder4Analyzer.cpp  InterpretedChunksDecoder4Analyzer.hpp  InterpretedChunksDecoder4Generator.cpp  InterpretedChunksDecoder4Generator.hpp
morfeusz/deserialization/: InterpsGroupsReader.cpp  InterpsGroupsReader.hpp  MorphDeserializer.cpp  MorphDeserializer.hpp  deserializationUtils.hpp
morfeusz/deserialization/morphInterps/: EncodedInterpretation.hpp  InterpretedChunksDecoder.cpp  InterpretedChunksDecoder.hpp  InterpretedChunksDecoder4Analyzer.cpp  InterpretedChunksDecoder4Analyzer.hpp  InterpretedChunksDecoder4Generator.cpp  InterpretedChunksDecoder4Generator.hpp  compressionByteUtils.hpp
morfeusz/deserializer/: InterpsGroupsReader.cpp  InterpsGroupsReader.hpp  MorphDeserializer.cpp
morfeusz/encoding/: CharsetConverter.cpp  CharsetConverter.hpp
morfeusz/fsa/: CMakeLists.txt  cfsa1_impl.hpp  cfsa2_impl.hpp  const.cpp  const.hpp  fsa.hpp  fsa_impl.hpp  simplefsa_impl.hpp  state_impl.hpp  test_not_recognize.cpp  test_recognize.cpp  test_speed.cpp
morfeusz/java/: CMakeLists.txt  dupa
morfeusz/java/pl/waw/ipipan/morfeusz/: MorfeuszProcessorType.java
morfeusz/java/pl/waw/ipipan/morfeusz/app/: App.java  MorfeuszUtils.java
morfeusz/perl/: CMakeLists.txt
morfeusz/python/: CMakeLists.txt  setup.py.in
morfeusz/segrules/: SegrulesDeserializer.cpp  SegrulesDeserializer.hpp  SegrulesFSA.cpp  SegrulesFSA.hpp  segrules.cpp  segrules.hpp
morfeusz/test/: consoleUtils.hpp  test_recognize_dict.cpp  test_result_equals.cpp
morfeusz/tests/: TestCAPI.cpp  TestMorfeusz.cpp  TestMorfeusz.hpp  test_c_api.cpp  validate.hpp
morfeusz/wrappers/: CMakeLists.txt  morfeusz.i  morfeusz_common.i  morfeusz_java.i  morfeusz_javadoc.i  morfeusz_python.i  morfeusz_python2.i  morfeusz_python3.i
morfeusz/wrappers/java/: CMakeLists.txt  JMorfeuszTest.java
morfeusz/wrappers/java/JMorfeuszTest/: build.xml
morfeusz/wrappers/java/JMorfeuszTest/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
morfeusz/wrappers/java/JMorfeuszTest/test/pl/sgjp/morfeusz/: JMorfeuszTest.java
morfeusz/wrappers/java/pl/sgjp/morfeusz/: MorphInterpretation.java
morfeusz/wrappers/java/pl/waw/ipipan/morfeusz/app/: App.java
morfeusz/wrappers/python/: CMakeLists.txt  setup.py.in  test.py
morfeusz/wrappers/python2/: CMakeLists.txt  WHEEL.win.in  setup.py.in
morfeusz/wrappers/python3/: CMakeLists.txt  WHEEL.linux.in  WHEEL.win.in  pyproject.toml  setup.cfg  setup.py.in  test3.py
nbproject/: configurations.xml  project.xml
pymorfeusz/: morfeusz.py  test.py
testfiles/: PoliMorfSmall.tab  convert.sh  dict.txt  dict_medium  test.in  test.out  test1.txt  test1.txt.CP1250  test1.txt.CP852  test1.txt.ISO8859-2  test1.txt.UTF16LE  test1.txt.out  test1.txt.out.CP852  test1.txt.out.ISO8859-2  test1_ISO8859-2.txt  test1_ISO8859-2.txt.out  test1_UTF16LE.txt  test1_UTF16LE.txt.out  test1_WINDOWS1250.txt  test1_WINDOWS1250.txt.out  test2.txt
toolchains/: Toolchain-Darwin-amd64.cmake  Toolchain-Windows-amd64.cmake  Toolchain-Windows-i386.cmake
(+63 files in other folders)
